commit by ramstein

--- a/templates/index.html
+++ b/templates/index.html
@@ -200,7 +200,7 @@
             <div class="d-flex justify-content-between">
                 <div>
                     <form class="form-upload" method=post enctype=multipart/form-data>
-                        <h6 class="h6 mb-3 font-weight-normal">Upload images (png, jpg, jpeg, tif, dcm, [max=5])</h6>
+                        <h6 class="h6 mb-3 font-weight-normal">Upload images (png, jpg, jpeg, tif, dcm, [1 < images > 10])</h6>
                         <div class="form-group">
 
                             <input type="file" id="images" name="files[]" class="form-control" multiple="true"
