--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Identify melanoma in images of skin lesions.">
     <meta name="author" content="BIONS">
-    <link rel="icon" href="static/img/bions_logo_512x512.png">
+    <link rel="icon"
+          href="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/img/bions_logo_512x512.png">
     <title>Skin Cancer, Melanoma Prediction</title>
     <link rel="canonical" href="index.html">
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap-4.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/bootstrap-4.0.0/dist/css/bootstrap.min.css"
+          rel="stylesheet">
     <!-- Custom styles for this template -->
-    <link href="static/css/dashboard.css" rel="stylesheet">
+    <link href="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/css/dashboard.css" rel="stylesheet">
 </head>
 <style>
 	.btn-primary1 {
@@ -67,12 +69,14 @@
 
 
 
+
 </style>
 
 <body>
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0 text-center" href="https://bions.us">
-        <img src="static/img/bions_logo_150x34.png" alt="BIONS" width="100" height="20"></a>
+        <img src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/img/bions_logo_150x34.png"
+             alt="BIONS" width="100" height="20"></a>
     <input class="form-control form-control-dark mr-sm-2 w-100" type="text" placeholder="Search" aria-label="Search">
     <ul class="navbar-nav px-3">
 
@@ -234,7 +238,8 @@
                               height="313">
                     </div>
                     {% else %}
-                    <div><img class="mb-4 rounded-corners-sample" src="static/img/ISIC_0015719.jpg"
+                    <div><img class="mb-4 rounded-corners-sample"
+                              src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/img/ISIC_0015719.jpg"
                               alt="sample" width="300" height="300">
                     </div>
                     {% endif %}
@@ -334,7 +339,7 @@
     </div>
 </div>
 
-<script src="static/js/jquery-3.2.1.slim.min.js"
+<script src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/js/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
 </script>
 <script>
@@ -361,12 +366,13 @@
 
 
 
+
 </script>
-<script src="static/js/popper.min.js"></script>
-<script src="bootstrap-4.0.0/dist/js/bootstrap.min.js"></script>
+<script src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/js/popper.min.js"></script>
+<script src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/bootstrap-4.0.0/dist/js/bootstrap.min.js"></script>
 
 <!-- Icons -->
-<script src="static/js/feather.min.js"></script>
+<script src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/js/feather.min.js"></script>
 <script>
 		feather.replace()
 
@@ -391,8 +397,9 @@
 
 
 
+
 </script>
 <!-- Graphs -->
-<script src="static/js/Chart.min.js"></script>
+<script src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/js/Chart.min.js"></script>
 </body>
 </html>
