--- a/templates/index.html
+++ b/templates/index.html
@@ -250,7 +250,7 @@
                         <thead>
                         <tr>
                             <th>Image ID</th>
-                            <th>melanoma probability</th>
+<!--                            <th>melanoma probability</th>-->
                             <th>Prediction</th>
                             <th>Diagnosis</th>
                             <!--                                                        <th>Regression</th>-->
@@ -260,7 +260,7 @@
                         <tbody>
                         <tr>
                             <td>{{column[1]}}</td>
-                            <td>{{column[2]}}</td>
+<!--                            <td>{{column[2]}}</td>-->
                             <td>{{column[3][0][0]}}</td>
                             <td>{{column[3][0][1]}}</td>
                             <!--                            <td>{{column[4]}}</td>-->
@@ -268,7 +268,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td></td>
+<!--                            <td></td>-->
                             <td>{{column[3][1][0]}}</td>
                             <td>{{column[3][1][1]}}</td>
                             <!--                            <td></td>-->
@@ -276,7 +276,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td></td>
+<!--                            <td></td>-->
                             <td>{{column[3][2][0]}}</td>
                             <td>{{column[3][2][1]}}</td>
                             <!--                            <td></td>-->
@@ -284,7 +284,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td></td>
+<!--                            <td></td>-->
                             <td>{{column[3][3][0]}}</td>
                             <td>{{column[3][3][1]}}</td>
                             <!--                            <td></td>-->
@@ -292,7 +292,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td></td>
+<!--                            <td></td>-->
                             <td>{{column[3][4][0]}}</td>
                             <td>{{column[3][4][1]}}</td>
                             <!--                            <td></td>-->
@@ -300,7 +300,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td></td>
+<!--                            <td></td>-->
                             <td>{{column[3][5][0]}}</td>
                             <td>{{column[3][5][1]}}</td>
                             <!--                            <td></td>-->
@@ -308,7 +308,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td></td>
+<!--                            <td></td>-->
                             <td>{{column[3][6][0]}}</td>
                             <td>{{column[3][6][1]}}</td>
                             <!--                            <td></td>-->
@@ -316,7 +316,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td></td>
+<!--                            <td></td>-->
                             <td>{{column[3][7][0]}}</td>
                             <td>{{column[3][7][1]}}</td>
                             <!--                            <td></td>-->
@@ -324,7 +324,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td></td>
+<!--                            <td></td>-->
                             <td>{{column[3][8][0]}}</td>
                             <td>{{column[3][8][1]}}</td>
                             <!--                            <td></td>-->
