--- a/templates/index.html
+++ b/templates/index.html
@@ -227,7 +227,7 @@
                 <h5>Predictions</h5>
             </div>
             {% for column in preds_html %}
-            <!--                    preds_html[0].append([None, "static/img/10011_right_820x615.png".split('/')[-1],-->
+            <!--                    preds_html[0].append([img_url, "static/img/10011_right_820x615.png".split('/')[-1],-->
             <!--                          [[0.84909, 'No DR'], [0.09395, 'Mild'], [0.04669, 'Moderate'],-->
             <!--                           [0.00633, 'Severe'], [0.00392, 'Proliferative DR']],-->
             <!--                          '0- No DR', 0.40505, 2.024725])-->
