--- a/templates/index.html
+++ b/templates/index.html
@@ -72,6 +72,7 @@
 
 
 
+
 </style>
 
 <body>
@@ -204,8 +205,7 @@
             <div class="d-flex justify-content-between">
                 <div>
                     <form class="form-upload" method=post enctype=multipart/form-data>
-                        <h6 class="h6 mb-3 font-weight-normal">Upload images (png, jpg, jpeg, tif, dcm, [1 < images >
-                            10])</h6>
+                        <h6 class="h6 mb-3 font-weight-normal">Upload images (png, jpg, jpeg, tif, dcm)</h6>
                         <div class="form-group">
 
                             <input type="file" id="images" name="files[]" class="form-control" multiple="true"
@@ -361,6 +361,7 @@
 
 
 
+
 </script>
 <script src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/js/popper.min.js"></script>
 <script src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/bootstrap-4.0.0/dist/js/bootstrap.min.js"></script>
@@ -369,6 +370,7 @@
 <script src="https://endpoint-app-ap1.s3.ap-south-1.amazonaws.com/webapp/static/js/feather.min.js"></script>
 <script>
 		feather.replace()
+
 
 
 
